# agents

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  mcp.json  orchestrator.py  pyproject.toml  requirements.txt  server.json  template.yaml
.claude/: settings.json  settings.local.json
.claude/skills/: architect.SKILL.md  codeCrafter.SKILL.md  codeReviewer.SKILL.md  devOps.SKILL.md  qualityGuard.SKILL.md  techLead.SKILL.md
.cursor/: mcp.json
.github/: copilot-instructions.md
.github/agents/: codeCrafter.agent.md  codeReviewer.agent.md  deploy_lead.agent.md  qualityGuard.agent.md  techLead.agent.md
.github/hooks/: hooks.json  on_stop.ps1  on_task_complete.ps1  on_write.ps1
.github/hooks/lib/: read_state.ps1
.github/shared/: architecture_log.md  project_context.md  project_state.md  standards.md
.github/skills/architect/: adr_generation.md  cost_estimation.md  disaster_recovery_strategy.md  generate_cdk_boilerplate.md  legacy_integration_bridge.md  reliability_design.md  security_group_audit.md  service_boundary_analysis.md
.github/skills/codeCrafter/: add_dependencies.md  api_contract_design.md  error_handling_strategy.md  implement_logic.md  performance_optimization.md  (+2 more)
prompts/agents/: architect.agent.md  devOps.agent.md
src/: main.py  orchestrator.py  pipeline.py  state.py
src/nodes/: _utils.py  architect_node.py  code_crafter_node.py  code_reviewer_node.py  dev_ops_node.py  devops_manual_guide_node.py  permission_gate_node.py  quality_guard_node.py  supervisor_node.py  tech_lead_gate_node.py
templates/: architecture_log.md  project_context.md  project_state.md  standards.md
(+48 files in other folders)
